--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -36,7 +36,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="status red"></div>
+                        <div [ngClass]="getClasseStatoCliente(sessionService.getCliente().stato_cliente)"></div>
                     </div>
                 </div>
                 <div class="dettaglio-cliente" *ngIf="!(sessionService.getCliente().cliente_id)">
